--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
-				  <a class="navbar-brand" href="#top">Books</a>
+				  <a class="navbar-brand" onclick="location.href='/';">Books</a>
 				</div>
 				
 				<div class="dropdown" id="dropdownM" style="float:left">
@@ -43,13 +43,16 @@
 				</form>
 				
 				<div style="float:right">
-					<button type="button" class="btn btn-default navbar-btn" onclick="location.href='/login';">Log In</button>
-					<button type="button" class="btn btn-default navbar-btn" onclick="location.href='/profile';">Profile</button>
-					<button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signup';">Sign up</button>
-					<button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signout';">Log Out</button>
-					<button type="button" class="btn btn-default navbar-btn">
-						<span class="glyphicon glyphicon-shopping-cart"></span>Cart
-					</button>
+					<% if(state=='loggedOut'){ %>
+					    <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/login';">Log In</button>
+					    <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signup';">Sign up</button>
+				    <% }else if(state=='loggedIn'){ %>
+                        <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/profile';">Profile</button>
+					    <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signout';">Log Out</button>
+					    <button type="button" class="btn btn-default navbar-btn">
+						    <span class="glyphicon glyphicon-shopping-cart"></span>Cart
+					    </button>
+				    <% } %>
 				</div>
 			</div>
 		</nav>
