--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -62,16 +62,13 @@
 				</form>
 				
 				<div style="float:right">
-					<% if(state=='loggedOut'){ %>
-					    <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/login';">Log In</button>
-					    <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signup';">Sign up</button>
-				    <% }else if(state=='loggedIn'){ %>
-                        <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/profile';">Profile</button>
-					    <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signout';">Log Out</button>
-					    <button type="button" class="btn btn-default navbar-btn">
-						    <span class="glyphicon glyphicon-shopping-cart"></span>Cart
-					    </button>
-				    <% } %>
+					<button type="button" class="btn btn-default navbar-btn" onclick="location.href='/login';">Log In</button>
+					<button type="button" class="btn btn-default navbar-btn" onclick="location.href='/profile';">Profile</button>
+					<button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signup';">Sign up</button>
+					<button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signout';">Log Out</button>
+					<button type="button" class="btn btn-default navbar-btn">
+						<span class="glyphicon glyphicon-shopping-cart"></span>Cart
+					</button>
 				</div>
 			</div>
 		</nav>
@@ -85,15 +82,17 @@
 			    <div class="col-sm-11"><h2><%= user.username %></h2></div>
 			 </div>
 			<ul class="nav nav-tabs">
-		    	<li class="active"><a data-toggle="tab" href="#home">Account</a></li>
+		    	<li class="active"><a data-toggle="tab" href="#home" id="acc">Account</a></li>
 		    	<li><a data-toggle="tab" href="#lend">Renting</a></li>
 		    	<li><a data-toggle="tab" href="#rent">Borrowing</a></li>
 		    	<li><a data-toggle="tab" href="#messages">Messages <span class="badge">0</span></a></li>
+                <li><a data-toggle="tab" href="#mybooks" id="mybookbutton">My Books<span class="badge">0</span></a></li>
+                <li><a data-toggle="tab" href="#book">Add Book<span class="badge"></span></a></li>
 			</ul>
 
 			<div class="tab-content">
 				<div id="home" class="tab-pane fade in active">
-		    		<h3>Account</h3>
+		    		<h3 class="print"></h3>
 		    		
 		    	</div>
 
@@ -138,6 +137,63 @@
 		    		<h3>Messages</h3>
 		    		<p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 		    	</div>
+                
+                <div id="mybooks" class="tab-pane fade">
+		    		<h3>My Books</h3>
+                    <p id="printbooks"></p>
+		    	</div>
+                
+                <div id="book" class="tab-pane fade">
+		    		<h3>Add Book</h3>
+						
+                    
+                    <form class="form-horizontal" role="form" action="/addbook" method="POST">
+                              <div class="form-group">
+                                <label class="control-label col-sm-2" for="booktitle">Book Title</label>
+                                <div class="col-sm-10">
+                                  <input type="text" class="form-control" id="booktitle" name="booktitle" placeholder="Enter the book title">
+                                </div>
+                              </div>
+                              <div class="form-group">
+                                <label class="control-label col-sm-2" for="bookauthor">Book Author</label>
+                                <div class="col-sm-10"> 
+                                  <input type="text" class="form-control" id="bookauthor" name="bookauthor" placeholder="Enter the book's author">
+                                </div>
+                              </div>
+                               <div class="form-group">
+                                <label class="control-label col-sm-2" for="bookcost">Book Cost</label>
+                                <div class="col-sm-10"> 
+                                  <input type="text" class="form-control" id="bookcost" name="bookcost" placeholder="Enter the book's cost">
+                                </div>
+                              </div>
+                              <div class="form-group">
+                                    <label class="control-label col-sm-2" for="bookpic">Book Author</label>
+                                    <div class="col-sm-10"> 
+                                      <input type="text" class="form-control" id="bookpic" name="bookpic" placeholder="Upload the books cover photo">
+                                    </div>
+                              </div>
+                              <div class="form-group"> 
+                               <div class="col-sm-offset-2 col-sm-10">
+                                    <button type="submit" class="btn btn-default">Submit</button>
+                                </div>
+                              </div>
+
+                    </form>
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+                    
+				</div>
 			</div>
 		</div>
 
