--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -62,13 +62,16 @@
 				</form>
 				
 				<div style="float:right">
-					<button type="button" class="btn btn-default navbar-btn" onclick="location.href='/login';">Log In</button>
-					<button type="button" class="btn btn-default navbar-btn" onclick="location.href='/profile';">Profile</button>
-					<button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signup';">Sign up</button>
-					<button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signout';">Log Out</button>
-					<button type="button" class="btn btn-default navbar-btn">
-						<span class="glyphicon glyphicon-shopping-cart"></span>Cart
-					</button>
+					<% if(state=='loggedOut'){ %>
+					    <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/login';">Log In</button>
+					    <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signup';">Sign up</button>
+				    <% }else if(state=='loggedIn'){ %>
+                        <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/profile';">Profile</button>
+					    <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signout';">Log Out</button>
+					    <button type="button" class="btn btn-default navbar-btn">
+						    <span class="glyphicon glyphicon-shopping-cart"></span>Cart
+					    </button>
+				    <% } %>
 				</div>
 			</div>
 		</nav>
