--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -89,7 +89,7 @@
 		    	<li><a data-toggle="tab" href="#lend">Renting</a></li>
 		    	<li><a data-toggle="tab" href="#rent">Borrowing</a></li>
 		    	<li><a data-toggle="tab" href="#messages">Messages <span class="badge">0</span></a></li>
-                <li><a data-toggle="tab" href="#mybooks" id="mybookbutton">My Books<span class="badge">0</span></a></li>
+                <li><a data-toggle="tab" href="#mybooks" id="mybookbutton">My Books<span class="badge" id="bookcount">0</span></a></li>
                 <li><a data-toggle="tab" href="#book">Add Book<span class="badge"></span></a></li>
 			</ul>
 
