--- a/views/css/BookInfoStyle.css
+++ b/views/css/BookInfoStyle.css
@@ -1,8 +1,6 @@
 img {
-    height:100%;
-    width: 100%;
-    max-width:100%;
-    max-height:100%;
+    height:400px;
+    width: 300px;
 }
 
 #dropdownM{
