--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -153,7 +153,7 @@
                 <div id="book" class="tab-pane fade">
 		    		<h3>Add Book</h3>
                     
-                    <form class="form-horizontal" role="form" action="/addbook" method="POST" enctype="multipart/form-data">
+                    <form class="form-horizontal" role="form" action="/addbook" method="POST" enctype="multipart/form-data" id="bookfrom">
                               <div class="form-group">
                                 <label class="control-label col-sm-2" for="booktitle">Book Title</label>
                                 <div class="col-sm-10">
@@ -163,17 +163,48 @@
                               <div class="form-group">
                                 <label class="control-label col-sm-2" for="bookauthor">Book Author</label>
                                 <div class="col-sm-10"> 
-                                  <input type="text" class="form-control" id="bookauthor" name="bookauthor" placeholder="Enter the book's author">
+                                  <input type="text" class="form-control" id="bookauthor" name="bookauthor" placeholder="Enter the book's author" required>
                                 </div>
                               </div>
                                <div class="form-group">
                                 <label class="control-label col-sm-2" for="bookcost">Book Cost</label>
                                 <div class="col-sm-10"> 
-                                  <input type="text" class="form-control" id="bookcost" name="bookcost" placeholder="Enter the book's cost">
+                                  <input type="text" class="form-control" id="bookcost" name="bookcost" placeholder="Enter the book's cost" required>
                                 </div>
                               </div>
+                               <div class="form-group">
+                                <label class="control-label col-sm-2" for="language">Book Language</label>
+                                <div class="col-sm-10"> 
+                                  <input type="text" class="form-control" id="language" name="language" placeholder="Enter the book's language" required>
+                                </div>
+                              </div>
+                               <div class="form-group">
+                                <label class="control-label col-sm-2" for="publisher">Book Publisher</label>
+                                <div class="col-sm-10"> 
+                                  <input type="text" class="form-control" id="publisher" name="publisher" placeholder="Enter the book's publisher" required>
+                                </div>
+                              </div>
+
+                               <div class="form-group">
+                                <label class="control-label col-sm-2" for="genre">Genre</label>
+                                <div class="col-sm-10"> 
+                                <input list="genres" class="form-control" id="genre" name="genre" placeholder="Choose the genre" required>                                   <datalist id="genres">
+
+                                          <option value="Action">Action</option>
+                                          <option value="Comedy">Comedy</option>
+                                          <option value="Fantasy">Fantasy</option>
+                                          <option value="Fiction">Fiction</option>
+                                          <option value="Mystery">Mystery</option>
+                                          <option value="Romance">Romance</option>
+                                          <option value="Scifi">Science Fiction</option>
+                                          <option value="Thriller">Thriller</option>
+                                   </datalist>                                
+
+                                    </div>                                  
+                                </div>
+                        
                               <div class="form-group">
-                                    <label class="control-label col-sm-2" for="mypic">mypic</label>
+                                    <label class="control-label col-sm-2" for="mypic">Cover Photo</label>
                                 <div class="col-sm-10"> 
                                     <input type="file" class="form-control" id="mypic" name="mypic" placeholder="Upload your pic">
                                 </div>
