--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -27,56 +27,15 @@
 
     <body id="page-top" class="index" background="img/Background.png">
  		<!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-			<div class="container-fluid">
-				<div class="navbar-header">
-				  <a class="navbar-brand" onclick="location.href='/';">Books</a>
-				</div>
-				
-				<div class="dropdown" id="dropdownM" style="float:left">
-				  <button type="button" id="Genre" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-					Search by Genre <span class="caret"></span>
-				  </button>
-				  <ul class="dropdown-menu">
-					<li><a href="#">Action</a></li>
-					<li><a href="#">Comedy</a></li>
-					<li><a href="#">Fantasy</a></li>
-					<li><a href="#">Fiction</a></li>
-					<li><a href="#">Mystery</a></li>
-					<li><a href="#">Romance</a></li>
-					<li><a href="#">Science Fiction</a></li>
-					<li><a href="#">Thriller</a></li>
-				  </ul>
-				</div>
-				
-				<form class="navbar-form" role="search" style="float:left">
-				  <div class="form-group">
-					<input type="text" class="form-control" size="50" placeholder="Enter Book Title or Author's Name">
-				  </div>
-				  
-				  <button type="button" class="btn btn-default" onclick="location.href='resultspage.html';">
-					<span class="glyphicon glyphicon-search"></span>Search
-				  </button>
-				</form>
-				
-				<div style="float:right">
-					<% if(state=='loggedOut'){ %>
-					    <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/login';">Log In</button>
-					    <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signup';">Sign up</button>
-				    <% }else if(state=='loggedIn'){ %>
-                        <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/profile';">Profile</button>
-					    <button type="button" class="btn btn-default navbar-btn" onclick="location.href='/signout';">Log Out</button>
-					    <button type="button" class="btn btn-default navbar-btn">
-						    <span class="glyphicon glyphicon-shopping-cart"></span>Cart
-					    </button>
-				    <% } %>
-				</div>
-			</div>
-		</nav>
+        <header>
+           <% include js/navbars %>
+        </header>
 
 	    <div class="spacer">
 		    &nbsp;
 		</div>
+        
+        
 	    <div id="miniNav" class="container">
 	    	<div class="row">
 			    <div class="col-sm-1"><img src="img/user_icon.png" class="img-circle" alt="Cinque Terre" width="50" height="50"></div>
