--- a/views/resultspage.ejs
+++ b/views/resultspage.ejs
@@ -9,7 +9,9 @@
     </head>
     
     <body>
-		
+		<header>
+           <% include js/navbars %>
+        </header>
 
         <div class="spacer">
 		    &nbsp;
