--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -48,7 +48,6 @@
 		    	<li><a data-toggle="tab" href="#lend" id="mybookbutton">Renting</a></li>
 		    	<li><a data-toggle="tab" href="#rent">Borrowing</a></li>
 		    	<li><a data-toggle="tab" href="#messages" id="myMessages">Messages <span class="badge">0</span></a></li>
-                <li><a data-toggle="tab" href="#mybooks" >My Books<span class="badge" id="bookcount">0</span></a></li>
                 <li><a data-toggle="tab" href="#book">Add Book<span class="badge"></span></a></li>
                 <li><a data-toggle="tab" href="#sMessage">Send Message<span class="badge"></span></a></li>
 			</ul>
@@ -62,20 +61,23 @@
 		    	<div id="lend" class="tab-pane fade">
 		    		<h3>Renting</h3>
 						<ul id="verticalNav" class="nav nav-pills nav-stacked col-md-1" >
-					    	<li class="active"><a data-toggle="tab" href="#ads">Ads</a></li>
+					    	<li class="active"><a data-toggle="tab" href="#ads">Ads<span class="badge" id="bookcount">0</span></a></li>
 					    	<li><a data-toggle="tab" href="#lent">Lent</a></li>
 					    	<li><a data-toggle="tab" href="#history">History</a></li>
 						</ul>
-
+                        
+                    <div class="col-md-11">
 						<div id="ads" class="tab-pane fade in active">
 							<p id="printbooks"></p>
 						</div>
+                    </div>
 						<div id="lent" class="tab-pane fade">
 							<p>Here is supposed to be data about the books the user is renting to someone else</p>
 						</div>
 						<div id="history" class="tab-pane fade">
 							<p>Here is supposed to be data about the books the user has rented</p>
 						</div>
+                    
 				</div>
 
 		    	<div id="rent" class="tab-pane fade">
