--- a/views/BookInfo.ejs
+++ b/views/BookInfo.ejs
@@ -32,8 +32,9 @@
 							<td>Author</td>
 							<td><%= book.author %></td>
 							<td rowspan="7">
-								<form>
-									<textarea rows="10" cols="50" placeholder="Enter message here...."></textarea>
+								 <form class="form-horizontal" role="form" action="/sendMessage" method="POST">
+									<input type="hidden" class="form-control" id="to" name="to" value= "<%=book.user %>" placeholder="<%=book.user %>">
+									<textarea rows="10" cols="50" id="message" name="message" placeholder="Enter message here...."></textarea>
 									&nbsp
 									<button type="submit" class="btn btn-default">
 										<span class="glyphicon glyphicon-envelope"></span>Send Message
