--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -47,7 +47,8 @@
 		    	<li class="active"><a data-toggle="tab" href="#home" id="acc">Account</a></li>
 		    	<li><a data-toggle="tab" href="#lend" id="mybookbutton">Renting</a></li>
 		    	<li><a data-toggle="tab" href="#rent">Borrowing</a></li>
-		    	<li><a data-toggle="tab" href="#messages" id="myMessages">Messages <span class="badge">0</span></a></li>
+		    	<li><a data-toggle="tab" href="#messages" id="myMessages">Messages <span class="badge" id = "numMessages">0</span></a></li>
+                <li><a data-toggle="tab" href="#mybooks" >My Books<span class="badge" id="bookcount">0</span></a></li>
                 <li><a data-toggle="tab" href="#book">Add Book<span class="badge"></span></a></li>
                 <li><a data-toggle="tab" href="#sMessage">Send Message<span class="badge"></span></a></li>
 			</ul>
@@ -198,7 +199,7 @@
                               <div class="form-group">
                                 <label class="control-label col-sm-2" for="message">Message</label>
                                 <div class="col-sm-10"> 
-                                  <input type="text" class="form-control" id="message" name="message" placeholder="Enter the message">
+                                    <textarea rows = "5" type="text" class="form-control" id="message" name="message" placeholder="Enter the message"></textarea>
                                 </div>
                               </div>
                               <div class="form-group"> 
