Implemented viewing another user's profile

--- a/views/BookInfo.ejs
+++ b/views/BookInfo.ejs
@@ -64,7 +64,7 @@
 						</tr>
 						<tr>
 							<td>Renter</td>
-							<td><%=book.user %></td>
+                            <td><a id="username" href="/user?username=<%=book.user %>"><%=book.user %></a></td>
 						</tr>
 						<tr>
 							<td>Description</td>
