--- a/views/css/HomepageStyle.css
+++ b/views/css/HomepageStyle.css
@@ -38,7 +38,7 @@ body{
 
 .thumbnail{
 	//background: transparent;
-	background-image: url(../img/TBB.jpg);
+	/*background-image: url(../img/TBB.jpg);*/
 }
 
 .row{
