--- a/views/css/BookInfoStyle.css
+++ b/views/css/BookInfoStyle.css
@@ -23,3 +23,18 @@ textarea{
     width: 100%;
     height: 65px;
 }
+
+a{
+  padding: 2px 0px;
+  border-radius: 4px;
+  outline: none;
+  color: #B0B0B0 ;
+  text-decoration: none;
+  transition: 0.5s;
+    font-weight: bold;
+}
+a:hover, a:focus {
+  color:black;
+  background: 	white;
+  transition: 0.5s;
+}
