--- a/views/css/style.css
+++ b/views/css/style.css
@@ -34,13 +34,17 @@ label{
 	color:white;
 }
 
-form .stars {
+.stars {
   background: url("../img/stars.png") repeat-x 0 0;
   width: 150px;
-  margin: 0 auto;
+  margin: 0 left;
+}
+
+form .stars{
+    margin: 0 auto;
 }
  
-form .stars input[type="radio"] {
+.stars input[type="radio"] {
   position: absolute;
   opacity: 0;
   filter: alpha(opacity=0);
@@ -60,7 +64,7 @@ form .stars input[type="radio"].star-2:checked ~ span {
 form .stars input[type="radio"].star-1:checked ~ span {
   width: 20%;
 }
-form .stars label {
+.stars label {
   display: block;
   width: 30px;
   height: 30px;
@@ -71,10 +75,15 @@ form .stars label {
   position: relative;
   z-index: 10;
   background: transparent!important;
-  cursor: pointer;
+  
 }
+
+form .stars label{
+    cursor: pointer;
+}
+
 form .stars label:hover ~ span {
-  background-position: 0 -30px;
+  background-position: 0 -60px;
 }
 form .stars label.star-5:hover ~ span {
   width: 100% !important;
@@ -91,7 +100,7 @@ form .stars label.star-2:hover ~ span {
 form .stars label.star-1:hover ~ span {
   width: 20% !important;
 }
-form .stars span {
+.stars span, #limitingSpan {
   display: block;
   width: 0;
   position: relative;
@@ -104,4 +113,10 @@ form .stars span {
   -ms-transition: -ms-width 0.5s;
   -o-transition: -o-width 0.5s;
   transition: width 0.5s;
+}
+
+
+#reviews {
+    max-height: 300px;
+    overflow: scroll;
 }
