--- a/views/profile-2.ejs
+++ b/views/profile-2.ejs
@@ -15,7 +15,7 @@
   		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-        <script src="js/profile.js" type="text/javascript"></script>       
+        <script src="js/user.js" type="text/javascript"></script>       
 
         <!-- Custom CSS -->
         <!--<link href="css/agency.css" rel="stylesheet">-->
@@ -30,6 +30,12 @@
         <header>
            <% include js/navbars %>
         </header>
+        
+        <style>
+            form .stars span {
+                width:<%=user.averageRating*20 %>%;
+            }
+        </style>
 
 	    <div class="spacer">
 		    &nbsp;
@@ -40,49 +46,73 @@
 	    	<div class="row">
 			    <div class="col-sm-1"><img src="img/user_icon.png" class="img-circle" alt="Cinque Terre" width="50" height="50"></div>
 			    <div class="col-sm-11">
-                   <h2><%= user.firstName+" " %><%= user.lastName %></h2>
+                   <h2><%= user.username%></h2>
+                </div>
+            </div>
+            <div class="row">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a data-toggle="tab" href="#info" id="acc">Info</a></li>
+                    <li><a data-toggle="tab" href="#ad" id="mybookbutton">Ads</a></li>
+                    <li><a data-toggle="tab" href="#review">Reviews</a></li>
+			     </ul>
+            </div>
+            
+            <div class="tab-content">
+            <div id="info" class="tab-pane fade in active">
+                <h2>Info</h2>
+                <div class="col-md-12">
+                    <p>Name: <%= user.firstName+" " %><%= user.lastName %></p>
+                    <p>Email: <%=user.email%></p>
                 </div>
             </div>
             
+            <div id="ad" class="tab-pane fade in">
+                <h2>Ads</h2>
+                <div id ="ads" class="col-md-12">
+                </div>
+            </div>
             
-            <div id="profile">
-                <form role="form" action="/addreview?username=<%= user.username%>" method="POST">
-                    <div class="form-group">
-                        <label class="control-label col-sm-2" for="review">Rating</label>
-                            <div class="stars">
-                                <input type="radio" name="star" class="star-1" id="star-1" value="1"/>
-                                <label class="star-1" for="star-1">1</label>
-                                <input type="radio" name="star" class="star-2" id="star-2" value="2"/>
-                                <label class="star-2" for="star-2">2</label>
-                                <input type="radio" name="star" class="star-3" id="star-3" value="3"/>
-                                <label class="star-3" for="star-3">3</label>
-                                <input type="radio" name="star" class="star-4" id="star-4" value="4"/>
-                                <label class="star-4" for="star-4">4</label>
-                                <input type="radio" name="star" class="star-5" id="star-5" value="5"/>
-                                <label class="star-5" for="star-5">5</label>
-                                <span></span>
+            <div id="review" class="tab-pane fade in">
+                <h2>Reviews</h2>
+                <div id="reviews" >
+                    <% include js/rating %>
+                </div>
+
+                 &nbsp;
+                <h2>Submit a Review</h2>
+                    <div>
+                        <form role="form" action="/addreview?username=<%= user.username%>" method="POST">
+                            <div class="form-group">
+                                <label class="control-label col-sm-2" for="review">Rating</label>
+                                    <div class="stars">
+                                        <input type="radio" name="star" class="star-1" id="star-1" value="1"/>
+                                        <label class="star-1" for="star-1">1</label>
+                                        <input type="radio" name="star" class="star-2" id="star-2" value="2"/>
+                                        <label class="star-2" for="star-2">2</label>
+                                        <input type="radio" name="star" class="star-3" id="star-3" value="3"/>
+                                        <label class="star-3" for="star-3">3</label>
+                                        <input type="radio" name="star" class="star-4" id="star-4" value="4"/>
+                                        <label class="star-4" for="star-4">4</label>
+                                        <input type="radio" name="star" class="star-5" id="star-5" value="5"/>
+                                        <label class="star-5" for="star-5">5</label>
+                                        <span></span>
+                                    </div>
                             </div>
+                            <div class="form-group">
+                                <label class="control-label col-sm-2" for="review">Review</label>
+                                <div class="col-sm-10">
+                                    <textarea class="form-control" rows="5" id="review" name="review" placeholder="Enter Review..."></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-offset-2 col-sm-10">
+                                    <button type="submit" class="btn btn-default">Submit</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                    <div class="form-group">
-                        <label class="control-label col-sm-2" for="review">Review</label>
-                        <div class="col-sm-10">
-                            <textarea class="form-control" rows="5" id="review" name="review" placeholder="Enter Review..."></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-default">Submit</button>
-                        </div>
-                    </div>
-                </form>
             </div>
-            
-            <div id="ads">
-                <p>Here is supposed to be data about the books I'm borrowing</p>
-            </div>
-            <div id="reviews">
-                <p>History of books user has borrowed</p>
-            </div>
+        </div>
             
         </div>
         
