Minor bug fixes

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -63,23 +63,23 @@
 		    		<h3>Renting</h3>
 						<ul id="verticalNav" class="nav nav-pills nav-stacked col-md-1" >
 					    	<li class="active"><a data-toggle="tab" href="#ads">Ads<span class="badge" id="bookcount">0</span></a></li>
-					    	<li><a data-toggle="tab" href="#lent">Lent</a></li>
-					    	<li><a data-toggle="tab" href="#history">History</a></li>
+					    	<li><a data-toggle="pill" href="#lent">Lent</a></li>
+					    	<li><a data-toggle="pill" href="#history">History</a></li>
 						</ul>
                         
-                    <div class="col-md-11">
-						<div id="ads" class="tab-pane fade in active">
-							<p id="printbooks"></p>
-						</div>
+                    <div class="tab-content col-md-11">
+                            <div id="ads" class="tab-pane fade in active">
+                                <p id="printbooks"></p>
+                            </div>
+                            <div id="lent" class="tab-pane fade">
+                                <p>Here is supposed to be data about the books the user is renting to someone else</p>
+                            </div>
+                            <div id="history" class="tab-pane fade">
+                                <p>Here is supposed to be data about the books the user has rented</p>
+                            </div>
                     </div>
-						<div id="lent" class="tab-pane fade">
-							<p>Here is supposed to be data about the books the user is renting to someone else</p>
-						</div>
-						<div id="history" class="tab-pane fade">
-							<p>Here is supposed to be data about the books the user has rented</p>
-						</div>
+                </div>
                     
-				</div>
 
 		    	<div id="rent" class="tab-pane fade">
 		    		<h3>Borrowing</h3>
@@ -92,10 +92,10 @@
 						<div id="ads" class="tab-pane fade in active">
 							<p>Here is supposed to be data about the books I'm interesting in borrowing</p>
 						</div>
-						<div id="lent" class="tab-pane fade">
+						<div id="" class="tab-pane fade">
 							<p>Here is supposed to be data about the books I'm borrowing</p>
 						</div>
-						<div id="history" class="tab-pane fade">
+						<div id="" class="tab-pane fade">
 							<p>History of books user has borrowed</p>
 						</div>
 		    	</div>
