--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,13 +23,13 @@
           <div class="form-group">
             <label class="control-label col-sm-2" for="username">Username</label>
             <div class="col-sm-10"> 
-              <input type="text" class="form-control" id="username" name="username" placeholder="Enter a username">
+              <input type="text" class="form-control" id="username" name="username" placeholder="Enter a username" required>
             </div>
           </div>
           <div class="form-group">
             <label class="control-label col-sm-2" for="password">Password</label>
             <div class="col-sm-10"> 
-              <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password">
+              <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
             </div>
           </div>
           <br>
