--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -23,37 +23,37 @@
           <div class="form-group">
             <label class="control-label col-sm-2" for="firstName">First Name</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter your first name">
+              <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter your first name" required>
             </div>
           </div>
           <div class="form-group">
             <label class="control-label col-sm-2" for="lastName">Last Name</label>
             <div class="col-sm-10"> 
-              <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Enter your last name">
+              <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Enter your last name"required>
             </div>
           </div>
           <div class="form-group">
             <label class="control-label col-sm-2" for="username">Username</label>
             <div class="col-sm-10"> 
-              <input type="text" class="form-control" id="username" name="username" placeholder="Enter a username">
+              <input type="text" class="form-control" id="username" name="username" placeholder="Enter a username"required>
             </div>
           </div>
           <div class="form-group">
             <label class="control-label col-sm-2" for="password">Password</label>
             <div class="col-sm-10"> 
-              <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password">
+              <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password"required>
             </div>
           </div>
           <div class="form-group">
             <label class="control-label col-sm-2" for="password2">Password again</label>
             <div class="col-sm-10"> 
-              <input type="password" class="form-control" id="password2" name="password2" placeholder="Re enter your password">
+              <input type="password" class="form-control" id="password2" name="password2" placeholder="Re enter your password"required>
             </div>
           </div>
           <div class="form-group">
             <label class="control-label col-sm-2" for="email">Email</label>
             <div class="col-sm-10"> 
-              <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email">
+              <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email"required>
             </div>
           </div>
           <br>
