--- a/views/navbars.ejs
+++ b/views/navbars.ejs
@@ -23,6 +23,7 @@
 				<form class="navbar-form" role="search" style="float:left" action="/search" method="GET">
 				  <div class="form-group">
 					<input type="text" class="form-control" size="50" name="name" placeholder="Enter Book Title or Author's Name">
+                    <input type="hidden" name="page" value="1">
 				  </div>
 				  
 				  <button type="submit" class="btn btn-default">
