--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,14 +43,14 @@
 		<h2 id="MPB">Suggested Books</h2>
 		
 		<div class="row">
-          <% for(var i=0; i<books.length; i++) {%>
+          <% for(var i=0; i<suggested.length; i++) {%>
 			  <div class="col-md-2">
 				<div class="thumbnail">
-				  <img src="<%= books[i].photolink %>" width="100" height="100">
+				  <img src="<%= suggested[i].photolink %>" width="100" height="100">
 				  <div class="caption">
-					<h4><%= books[i].title %></h4>
-					<p><%= books[i].genre %></p>
-					<p><a href="BookInfo.html" class="btn btn-primary" role="button">Rent</a> <a href="/bookInfo?book=<%= books[i].id %>" class="btn btn-default" role="button">View</a></p>
+					<h4><%= suggested[i].title %></h4>
+					<p><%= suggested[i].genre %></p>
+					<p><a href="BookInfo.html" class="btn btn-primary" role="button">Rent</a> <a href="/bookInfo?book=<%= suggested[i].id %>" class="btn btn-default" role="button">View</a></p>
 				  </div>
 				</div>
             </div>
