--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -40,13 +40,12 @@
 	    	<div class="row">
 			    <div class="col-sm-1"><img src="img/user_icon.png" class="img-circle" alt="Cinque Terre" width="50" height="50"></div>
 			    <div class="col-sm-11">
-                   <h2><%= user.firstName+" " %><%= user.lastName %></h2>
+                   <h2><%= user.username%></h2>
                 </div>
             </div>
 			<ul class="nav nav-tabs">
 		    	<li class="active"><a data-toggle="tab" href="#home" id="acc">Account</a></li>
 		    	<li><a data-toggle="tab" href="#lend" id="mybookbutton">Renting</a></li>
-		    	<li><a data-toggle="tab" href="#rent">Borrowing</a></li>
 		    	<li><a data-toggle="tab" href="#messages" id="myMessages">Messages <span class="badge" id = "numMessages">0</span></a></li>
                 <li><a data-toggle="tab" href="#book">Add Book<span class="badge"></span></a></li>
                 <li><a data-toggle="tab" href="#sMessage">Send Message<span class="badge"></span></a></li>
@@ -54,8 +53,102 @@
 
 			<div class="tab-content">
 				<div id="home" class="tab-pane fade in active">
-		    		<h3 class="print"></h3>
-		    		
+		    		<h3 class="print">Welecome <%= user.firstName%>, <br><br> Your account info is as follows: </h3>
+                &nbsp;
+                    <div clas="row">
+                        <div class="col-sm-10" ><h2 style="padding: 0 ; margin:0">First name: <%= user.firstName%></h2></div>
+                        <div class="col-sm-2"><button id="fNameButton"class="btn btn-default">Edit</button></div>
+                    </div> 
+                     <br>
+                     <div id="fNameData" style="display:none">
+                         <form class="form-horizontal" role="form" action="/changeInfo" method="POST">
+                            &nbsp;
+                             <div class="form-group" >
+                                <label class="control-label col-sm-2" for="change">Enter First Name</label>
+                                <div class="col-sm-10"> 
+                                    <input type="text" class="form-control" id="fNameChange" name="change" placeholder="Enter new name" required>
+                                </div>
+                            </div>
+                            <input type="hidden" class="form-control" id="username" name="username" value="<%=user.username%>">
+                            <input type="hidden" class="form-control" id="firstname" name="infoChange" value="firstName">
+                            <div class="form-group"> 
+                                <div class="col-sm-offset-2 col-sm-10">
+                                    <button type="submit" class="btn btn-default">Change First Name</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                &nbsp;
+                    <div clas="row">
+                        <div class="col-sm-10"><h2 style="padding: 0 ; margin:0">Last name: <%= user.lastName%></h2></div>
+                        <div class="col-sm-2"><button id="lNameButton" class="btn btn-default">Edit</button></div>
+                    </div>
+                    <div id="lNameData" style="display:none">
+                         <form class="form-horizontal" role="form" action="/changeInfo" method="POST">
+                            &nbsp;
+                             <div class="form-group">
+                                <label class="control-label col-sm-2" for="change">Enter Last Name</label>
+                                <div class="col-sm-10"> 
+                                    <input type="text" class="form-control" id="lNameChange" name="change" placeholder="Enter new name" required>
+                                </div>
+                            </div>
+                            <input type="hidden" class="form-control" id="username" name="username" value="<%=user.username%>">
+                            <input type="hidden" class="form-control" id="lastname" name="infoChange" value="lastName">
+                            <div class="form-group"> 
+                                <div class="col-sm-offset-2 col-sm-10">
+                                    <button type="submit" class="btn btn-default">Change Last Name</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                &nbsp;
+                    <div clas="row">
+                        <div class="col-sm-10"><h2 style="padding: 0 ; margin:0">Email: <%= user.email%></h2></div>
+                        <div class="col-sm-2"><button id="emailButton" class="btn btn-default">Edit</button></div>
+                    </div> 
+                    <div id="emailData" style="display:none">
+                         <form class="form-horizontal" role="form" action="/changeInfo" method="POST">
+                            &nbsp;
+                             <div class="form-group">
+                                <label class="control-label col-sm-2" for="change">Enter email</label>
+                                <div class="col-sm-10"> 
+                                    <input type="text" class="form-control" id="emailChange" name="change" placeholder="Enter new email" required>
+                                </div>
+                            </div>
+                            <input type="hidden" class="form-control" id="username" name="username" value="<%=user.username%>">
+                            <input type="hidden" class="form-control" id="email" name="infoChange" value="email">
+                            <div class="form-group"> 
+                                <div class="col-sm-offset-2 col-sm-10">
+                                    <button type="submit" class="btn btn-default">Change Email</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <br>
+                    <br>
+                    <br>
+                    <button class="btn btn-default" id="passbutton">Change Password</button>
+                    <div id="passdata" style="display:none">
+                    <form class="form-horizontal" role="form" action="/changePass2" method="POST">
+                        <div class="form-group">
+                            <label class="control-label col-sm-2" for="oldpassword">Old  Password</label>
+                            <div class="col-sm-10"> 
+                                <input type="password" class="form-control" id="oldpassword" name="oldpassword" placeholder="Enter old password" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-2" for="newpass">New Password</label>
+                            <div class="col-sm-10"> 
+                                <input type="password" class="form-control" id="newpass" name="newpass" placeholder="Enter new password" required>
+                            </div>
+                        </div>
+                        <div class="form-group"> 
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-default">Change Password</button>
+                            </div>
+                        </div>
+                    </form>
+                    </div>
 		    	</div>
 
 		    	<div id="lend" class="tab-pane fade">
@@ -167,6 +260,12 @@
 
                                     </div>                                  
                                 </div>
+                               <div class="form-group">
+                                <label class="control-label col-sm-2" for="publisher">Book Description</label>
+                                <div class="col-sm-10"> 
+                                  <input type="text" class="form-control" id="description" name="description" placeholder="Enter a brief description of the book's condition" required>
+                                </div>
+                              </div>                        
                         
                               <div class="form-group">
                                     <label class="control-label col-sm-2" for="mypic">Cover Photo</label>
