Fixed log out problem and changed facebook button

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,6 @@
 <html>
 <head>
        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <link href="css/signup.css" rel="stylesheet">
         <link href="css/HomepageStyle.css" rel="stylesheet">
 </head>
@@ -40,10 +38,12 @@
           </div>
     </form>
   </div>
-  
-    <button class="btn btn-primary" onclick="location.href='/facebook';"><span class="fa fa-facebook"></span> Facebook</button>
+    <div id=fb>
+        Log in with<button class="btn btn-primary" onclick="location.href='/facebook';"><span class="fa fa-facebook"></span> Facebook</button>
+    </div>
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 
 </html>
