--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -4,7 +4,6 @@
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
 		<link href="css/signup.css" rel="stylesheet">
         <link href="css/HomepageStyle.css" rel="stylesheet">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     </head>
     
     <body>
@@ -86,7 +85,7 @@
             <div class="col-sm-10"> 
               <input type="text" class="form-control" name="username" placeholder="Enter a username">
             </div>
-          <br>
+            </div>
           <br>
           <div class="form-group"> 
             <div class="col-sm-offset-2 col-sm-10">
@@ -94,7 +93,60 @@
             </div>
           </div>
        </form> 
-    </div>  
+    </div>         
         
+        <div class="spacer">
+		    &nbsp;
+		</div> 
+          
+    <div class="container">
+        <h2> Add User </h2>
+
+        <form class="form-horizontal" role="form" action="/signup" method="POST">
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="firstName">First Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Enter your first name" required>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="lastName">Last Name</label>
+            <div class="col-sm-10"> 
+              <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Enter your last name"required>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="username">Username</label>
+            <div class="col-sm-10"> 
+              <input type="text" class="form-control" id="username" name="username" placeholder="Enter a username"required>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="password">Password</label>
+            <div class="col-sm-10"> 
+              <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password"required>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="password2">Password again</label>
+            <div class="col-sm-10"> 
+              <input type="password" class="form-control" id="password2" name="password2" placeholder="Re enter your password"required>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="email">Email</label>
+            <div class="col-sm-10"> 
+              <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email"required>
+            </div>
+          </div>
+          <br>
+          <div class="form-group"> 
+            <div class="col-sm-offset-2 col-sm-10">
+              <button type="submit" class="btn btn-default">Submit</button>
+            </div>
+          </div>
+    </form>      
+          
+       	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> 
     </body>
 </html>
