--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,10 +12,6 @@
         <title>Profile</title>
 
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-        <script src="js/profile.js" type="text/javascript"></script>       
 
         <!-- Custom CSS -->
         <!--<link href="css/agency.css" rel="stylesheet">-->
@@ -311,5 +307,9 @@
 				</div>
 			</div>
 		</div>
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+        <script src="js/profile.js" type="text/javascript"></script>       
+    </body>
 </html>
