Fixed bugs with pagination. Improved minor features. Fixed a few other minor bugs

--- a/views/css/resultspage.css
+++ b/views/css/resultspage.css
@@ -4,13 +4,14 @@ body{
 }
 
 
-.book :hover{
+/*#rImage :hover{
     width: 300px;
     transition: 1s;
 }
+
 .book {
     transition: 1s;
-}
+}*/
 resultbar{
 }
 button{
