--- a/views/BookInfo.ejs
+++ b/views/BookInfo.ejs
@@ -28,7 +28,7 @@
 				<table id="table"class="table table-bordered">
 					<tbody>
 						<tr>
-							<td rowspan="8"><img src="<%= book.photolink %>"></td>
+							<td rowspan="8"><img id="bigImage" src="<%= book.photolink %>"></td>
 							<td>Book Title</td>
 							<td ><div class="col-md-4" id="titleTd"><%= book.title %></div>
                             <div class="col-md-8">
@@ -174,28 +174,29 @@
 							<td><div class="col-md-4" id="desTd">$<%= book.description%></div>
                             <% if(state=='loggedIn'&& book.user==user.username){ %><button class="btn btn-default pull-right edit"id="desButton">edit</button><%}%></td>
 						</tr>
-                        <tr>
-                            <td colspan="4">
-                                
-                            <% for(var i=0; i<recommendedBooks.length; i++) {%>
-                              <div class="col-md-2">
-                                <div class="thumbnail">
-                                  <img src="<%= recommendedBooks[i].photolink %>" width="100" height="100">
-                                  <div class="caption">
-                                    <h4><%= recommendedBooks[i].title %></h4>
-                                    <p><%= recommendedBooks[i].genre %></p>
-                                    <p><a href="BookInfo.html" class="btn btn-primary" role="button">Rent</a> <a href="/bookInfo?book=<%= recommendedBooks[i].id %>" class="btn btn-default" role="button">View</a></p>
-                                  </div>
-                                </div>
-                            </div>
-                          <% } %>
-                                                        
-                            </td>
-                            
-                        </tr>
+                                       
 					</tbody>
 				</table>
 			</div>
+		</div>
+        
+        <h2 id="MPB">Similar Books</h2>
+        <div class="row">
+          <% for(var i=0; i<recommendedBooks.length; i++) {%>
+			  <div class="col-md-2">
+				<div class="thumbnail">
+
+                    <div class="area">
+                      <img src="<%= recommendedBooks[i].photolink %>" width="100px" height="110px">
+                      <div class="caption">
+                            <h4><%= recommendedBooks[i].title %></h4>
+                            <p><%= recommendedBooks[i].genre %></p>
+                            <p><a href="/bookInfo?book=<%= recommendedBooks[i]._id %>" class="btn btn-default" role="button">View</a></p>
+                      </div>
+                    </div>
+				</div>
+            </div>
+          <% } %>
 		</div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		<script src="js/bootstrap.js" type="text/javascript"></script>
