--- a/views/resultspage.ejs
+++ b/views/resultspage.ejs
@@ -14,18 +14,21 @@
         <div class="spacer">
 		    &nbsp;
 		</div>
-        <% if(genre==false){ %>
-            <div class="well well-sm">Page 1 of <%=pages%> for "<%= search %>" Results</div>
+        <% if(pages==0){%>
+            <div class="well well-sm">No results found</div>
+        <%} else if(genre==false){ %>
+            <div class="well well-sm">Page <%=page%> of <%=pages%> for "<%= search %>" Results</div>
         <% }else { %>
-            <div class="well well-sm">Page 1 of 1 for "<%= genreN %>" Results</div>
+            <div class="well well-sm">Page <%=page%> of <%=pages%> for "<%= genreN %>" Results</div>
         <% } %>
+        
         <div class="row">
-                <% if(genre==false){ %>
+                <% if(genre==false && pages!=0){ %>
                 <div class="sidebar col-md-1">
                    <ul id="verticalNav" class="nav nav-pills nav-stacked " >
-                        <li <%if(catv=='all'){%>class="active"<%}%>><a href="/search?cat=all&name=<%= search %>">All</a></li>
+                        <li <%if(catv=='all'){%>class="active"<%}%>><a href="/search?page=1&cat=all&name=<%= search %>">All</a></li>
                         <% for(var i=0; i<cat.length; i++) {%>
-                            <li <%if(catv==cat[i]){%>class="active"<%}%>><a href="/search?cat=<%= cat[i] %>&name=<%= search %>"><%= cat[i] %></a></li> 
+                            <li <%if(catv==cat[i]){%>class="active"<%}%>><a href="/search?page=1&cat=<%= cat[i] %>&name=<%= search %>"><%= cat[i] %></a></li> 
                         <% } %> 
 				   </ul> 
                 </div>
@@ -36,18 +39,50 @@
                         <% for(var i=0; i<books.length; i++) {%>
                             <a href="/bookInfo?book=<%= books[i].id %>" class="list-group-item"> 
                                 <div class = "book"> 
-                                    <img src="<%= books[i].photolink %>" class="img-rounded" alt="Cinque Terre" width="200" height="300">
-                                    <p3>Author: <%= books[i].author %></p3>
+                                    <table class="table">
+                                        <tbody>
+						                  <tr>
+                                              <td rowspan="8"> <img src="<%= books[i].photolink %>" class="img-rounded" alt="Cinque Terre" width="200" height="300" id="rImage"> </td> 
+                                              <td rowspan="8" colspan="8">
+                                    <!--</div>-->
+                                    <!--<div class="col-md-6">-->
+                                        <h2><%= books[i].title %></h2><br />
+                                        <p3>Author: <%= books[i].author %></p3><br />
+                                        <p3>Genre: <%= books[i].genre %></p3><br />
+                                        <p3>Language: <%= books[i].language %></p3><br />         
+                                        <p3>Price: <%= books[i].price %></p3><br />
+                                        <p3>Renter: <%= books[i].user %></p3><br />
+                                        
+                                              </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <!--</div>-->
                                 </div>
                             </a> 
                         <% } %>
                                 
                     </div>
                 </div>
-                <%if(parseInt(page)>1){%>
-                <button class="btn" id="prev" onclick="window.location.href='/search?page=<%=(parseInt(page)-1)%>&name=<%=search%>'">Prev</button>
+                <%if(genre==false){%>
+                    <%if(parseInt(page)>1){%>
+                    <button class="btn" id="prev" onclick="window.location.href='/search?page=<%=(parseInt(page)-1)%>&name=<%=search%>'">Prev</button>
+                    <%}%>
+                <%}else{%>
+                    <%if(parseInt(page)>1){%>
+                    <button class="btn" id="prev" onclick="window.location.href='/search?page=<%=(parseInt(page)-1)%>&genre=<%=genreN%>'">Prev</button>
+                    <%}%>
                 <%}%>
-                <button class="btn" id="next" onclick="window.location.href='/search?page=<%=(parseInt(page)+1)%>&name=<%=search%>'">Next</button>
+                
+                <%if(genre==false){%>
+                    <%if(parseInt(page)<parseInt(pages)){%>
+                    <button class="btn" id="prev" onclick="window.location.href='/search?page=<%=(parseInt(page)+1)%>&name=<%=search%>'">Next</button>
+                    <%}%>
+                <%}else{%>
+                    <%if(parseInt(page)<parseInt(pages)){%>
+                    <button class="btn" id="prev" onclick="window.location.href='/search?page=<%=(parseInt(page)+1)%>&genre=<%=genreN%>'">Next</button>
+                    <%}%>
+                <%}%>
             </div>
         </div>
 
