--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,6 +41,10 @@
     <div id=fb>
         Log in with<button class="btn btn-primary" onclick="location.href='/facebook';"><span class="fa fa-facebook"></span> Facebook</button>
     </div>
+  
+    <% if(fail==1){%><div class="alert alert-danger">
+  <strong>Error!</strong> Incorrect login information
+</div><%}%>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
