--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -60,7 +60,7 @@
                     </div> 
                      <br>
                      <div id="fNameData" style="display:none">
-                         <form class="form-horizontal" role="form" action="/changeInfo" method="POST">
+                         <form class="form-horizontal" role="form" action="/changeInfo?user=1" method="POST">
                             &nbsp;
                              <div class="form-group" >
                                 <label class="control-label col-sm-2" for="change">Enter First Name</label>
@@ -83,7 +83,7 @@
                         <div class="col-sm-2"><button id="lNameButton" class="btn btn-default">Edit</button></div>
                     </div>
                     <div id="lNameData" style="display:none">
-                         <form class="form-horizontal" role="form" action="/changeInfo" method="POST">
+                         <form class="form-horizontal" role="form" action="/changeInfo?user=1" method="POST">
                             &nbsp;
                              <div class="form-group">
                                 <label class="control-label col-sm-2" for="change">Enter Last Name</label>
@@ -106,7 +106,7 @@
                         <div class="col-sm-2"><button id="emailButton" class="btn btn-default">Edit</button></div>
                     </div> 
                     <div id="emailData" style="display:none">
-                         <form class="form-horizontal" role="form" action="/changeInfo" method="POST">
+                         <form class="form-horizontal" role="form" action="/changeInfo?user=1" method="POST">
                             &nbsp;
                              <div class="form-group">
                                 <label class="control-label col-sm-2" for="change">Enter email</label>
@@ -154,8 +154,6 @@
 		    		<h3>Renting</h3>
 						<ul id="verticalNav" class="nav nav-pills nav-stacked col-md-1" >
 					    	<li class="active"><a data-toggle="tab" href="#ads">Ads<span class="badge" id="bookcount">0</span></a></li>
-					    	<li><a data-toggle="pill" href="#lent">Lent</a></li>
-					    	<li><a data-toggle="pill" href="#history">History</a></li>
 						</ul>
                         
                     <div class="tab-content col-md-11">
@@ -176,8 +174,6 @@
 		    		<h3>Borrowing</h3>
 		      		<ul id="verticalNav" class="nav nav-pills nav-stacked col-md-1" >
 					    	<li class="active"><a data-toggle="tab" href="#ads">Ads</a></li>
-					    	<li><a data-toggle="tab" href="#lent">Lent</a></li>
-					    	<li><a data-toggle="tab" href="#history">History</a></li>
 						</ul>
 
 						<div id="ads" class="tab-pane fade in active">
@@ -315,5 +311,4 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
         <script src="js/profile.js" type="text/javascript"></script>       
     </body>
-
 </html>
