--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -65,6 +65,10 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <% if(fail==1){%><div class="alert alert-danger">
+  <strong>Error!</strong> Username already exists
+</div><%}%>
+
 </body>
 
 
